# Junction2023

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: app.html
src/lib/: font_loader.svelte  font_loader_worker.ts  metrics.ts
src/lib/fonts/: agbalumo.css  agbalumo.svelte  boxed.css  boxed.svelte  roboto.css  roboto.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/coinfall/: +page.svelte
src/routes/scratch/: +page.svelte  +server.ts
textToSurface/: Cargo.toml  compile_wasm.sh  patch_wasm.js
textToSurface/pkg/: package.json  textToSurface.d.ts  textToSurface.js  textToSurface_bg.js  textToSurface_bg.wasm  textToSurface_bg.wasm.d.ts
textToSurface/src/: lib.rs  testdata.txt
