[package]
name = "textToSurface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["serde_derive"] }
svg-path-parser = "0.1.1"
tsify = "0.4.5"
wasm-bindgen = "0.2.88"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = []
